--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,6 +6,18 @@ user-agent: rafo-upptime
 sites:
   - name: Homepage
     url: https://r4fo.com
+  - name: NL1 (server - hosting)
+    check: "tcp-ping"
+    url: $NL1
+    port: 53
+  - name: NL2 (server - BGP)
+    check: "tcp-ping"
+    url: $NL2
+    port: 53
+  - name: DE1 (server - BGP)
+    check: "tcp-ping"
+    url: $DE1
+    port: 53
   - name: SearXNG
     url: https://search.r4fo.com
   - name: MiniSearch
